Added missing override annotation Enabled timezone in properties

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -3,7 +3,7 @@
 ##########################################
 # Adjust system properties               #
 ##########################################
-# io.jexxa.user.timezone=UTC
+io.jexxa.user.timezone=UTC
 
 ##########################################
 #Settings for JMSAdapter and JMSSender   #
@@ -30,17 +30,17 @@ jlegmed.test-jdbc-connection.jdbc.autocreate.table=true
 ##########################################
 #Settings for HTTP                     #
 ##########################################
-jlegmed.test-http-connection.http.proxy.host=174.77.111.197
-jlegmed.test-http-connection.http.proxy.port=4145
-jlegmed.test-http-connection.http.proxy.username=
-jlegmed.test-http-connection.http.proxy.password=
-jlegmed.test-http-connection.http.proxy.file.username=
-jlegmed.test-http-connection.http.proxy.file.password=
+#jlegmed.test-http-connection.http.proxy.host=
+#jlegmed.test-http-connection.http.proxy.port=
+#jlegmed.test-http-connection.http.proxy.username=
+#jlegmed.test-http-connection.http.proxy.password=
+#jlegmed.test-http-connection.http.proxy.file.username=
+#jlegmed.test-http-connection.http.proxy.file.password=
 
 # Settings for TCP socket
-jlegmed.test-tcp-sender.tcp.port=6665
-jlegmed.test-tcp-sender.tcp.address=localhost
+#jlegmed.test-tcp-sender.tcp.port=6665
+#jlegmed.test-tcp-sender.tcp.address=localhost
 
 # Settings for TCP socket
-jlegmed.test-tcp-receiver.tcp.port=6665
+#jlegmed.test-tcp-receiver.tcp.port=6665
 
