--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
     <sonar.organization>jexxa-projects</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
-    <sonar.login>${sonar-login}</sonar.login>
+    <sonar.token>${sonar-login}</sonar.token>
     <sonar.projectKey>jexxa-projects_JLegMed</sonar.projectKey>
     <sonar.java.source>1.17</sonar.java.source>
     <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco-ut/jacoco.xml,target/site/jacoco-it/jacoco.xml </sonar.coverage.jacoco.xmlReportPaths>
