Added: Extend HTTPClient so that it can be completely configured using properties
Fix:
- proxy is only passed to unirest if it is set. Otherwise, we get an IllegalArgumentException
- Removed method start because it called produceData which is not correct

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -36,6 +36,7 @@ jlegmed.test-http-connection.http.proxy.username=
 jlegmed.test-http-connection.http.proxy.password=
 jlegmed.test-http-connection.http.proxy.file.username=
 jlegmed.test-http-connection.http.proxy.file.password=
+jlegmed.test-http-connection.http.url= http://localhost:7070
 
 # Settings for TCP socket
 jlegmed.test-tcp-sender.tcp.port=6665
