--- a/pom.xml
+++ b/pom.xml
@@ -39,16 +39,10 @@
     <maven.compiler.release>17</maven.compiler.release>
 
     <!-- version of core dependencies -->
-    <jexxa.adapter.api.version>4.2.3</jexxa.adapter.api.version>
-    <gson.version>2.10.1</gson.version>
+    <jexxa.commons.version>0.1.0-SNAPSHOT</jexxa.commons.version>
 
     <!-- version of dependencies -->
-    <javax.jms.version>2.0.1</javax.jms.version>
-    <activemq.artemis.client.version>2.31.2</activemq.artemis.client.version>
-    <postgres.version>42.6.0</postgres.version>
-    <slf4j.simple.version>2.0.9</slf4j.simple.version>
     <unirest.java.version>3.14.5</unirest.java.version>
-    <javalin.version>5.6.3</javalin.version>
 
 
     <!-- version of test dependencies -->
@@ -58,6 +52,10 @@
     <awaitility.version>4.2.0</awaitility.version>
     <jackson.databind.version>2.16.0</jackson.databind.version>
     <apache.commons.lang3>3.13.0</apache.commons.lang3>
+    <activemq.artemis.client.version>2.31.2</activemq.artemis.client.version>
+    <postgres.version>42.6.0</postgres.version>
+    <slf4j.simple.version>2.0.9</slf4j.simple.version>
+    <javalin.version>5.6.3</javalin.version>
 
 
 
@@ -105,41 +103,24 @@
   <dependencies>
     <!-- dependencies for library -->
     <dependency>
-      <groupId>io.jexxa</groupId>
-      <artifactId>jexxa-adapter-api</artifactId>
-      <version>${jexxa.adapter.api.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>io.jexxa.commons</groupId>
       <artifactId>jexxa-commons</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>${jexxa.commons.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>${gson.version}</version>
-      <scope>compile</scope>
+      <groupId>com.konghq</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>${unirest.java.version}</version>
+
+      <exclusions>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
-    <dependency>
-      <groupId>javax.jms</groupId>
-      <artifactId>javax.jms-api</artifactId>
-      <version>${javax.jms.version}</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.simple.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>${apache.commons.lang3}</version>
-    </dependency>
 
 
     <!-- dependencies for tests -->
@@ -227,19 +208,6 @@
       <artifactId>jetty-xml</artifactId>
       <version>11.0.16</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.konghq</groupId>
-      <artifactId>unirest-java</artifactId>
-      <version>${unirest.java.version}</version>
-
-      <exclusions>
-        <exclusion>
-          <groupId>commons-codec</groupId>
-          <artifactId>commons-codec</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
   </dependencies>
