Fix: MessageSenderPool uses JMSSender by default now.  Currently transactional outbox sender causes strange site effects at least in test. One reason could be that it is designed as singleton. Therefore, we use JMSSender at the moment
 Note: Transactional outbox sender requires a database connection which is typically available by default in Jexxa. Since TransactionalOutboxSender can also work with IMDBRepository we should limit this usage in JLegmed becuase we cannot assume a database here

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -15,6 +15,17 @@ jlegmed.test-jms-connection.java.naming.provider.url=tcp://localhost:61616
 jlegmed.test-jms-connection.java.naming.user=artemis
 jlegmed.test-jms-connection.java.naming.password=simetraehcapa
 
+# required if transactional outbox sender is used
+#jlegmed.test-jms-connection.jdbc.driver=org.postgresql.Driver
+#jlegmed.test-jms-connection.jdbc.url=jdbc:postgresql://localhost:5432/jlegmedtest
+#jlegmed.test-jms-connection.jdbc.username=postgres
+#jlegmed.test-jms-connection.jdbc.password=admin
+# The Following setting is only required if you want to auto-create your database, and it is supported via connection URL. In this case you have to define a valid default URL (e.g. for testing purpose)
+#jlegmed.test-jms-connection.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
+# The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
+#jlegmed.test-jms-connection.jdbc.autocreate.table=true
+
+
 ##########################################
 #Settings for JDBCConnection             #
 ##########################################
