Implemented initial fail fast approach for JDBC using ClassGraph

--- a/jlegmed-core/pom.xml
+++ b/jlegmed-core/pom.xml
@@ -19,6 +19,15 @@
     </license>
   </licenses>
 
+  <dependencies>
+  <!-- external dependencies for Jexxa core -->
+    <dependency>
+      <groupId>io.github.classgraph</groupId>
+      <artifactId>classgraph</artifactId>
+      <version>${classgraph.version}</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
