--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -39,6 +39,18 @@ jlegmed.test-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://localhos
 jlegmed.test-jdbc-connection.jdbc.autocreate.table=true
 
 ##########################################
+#Settings for JDBCConnection             #
+##########################################
+jlegmed.invalid-pw-jdbc-connection.jdbc.driver=org.postgresql.Driver
+jlegmed.invalid-pw-jdbc-connection.jdbc.url=jdbc:postgresql://localhost:5432/jlegmedtest
+jlegmed.invalid-pw-jdbc-connection.jdbc.username=postgres
+jlegmed.invalid-pw-jdbc-connection.jdbc.password=admin2
+# The Following setting is only required if you want to auto-create your database, and it is supported via connection URL. In this case you have to define a valid default URL (e.g. for testing purpose)
+jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
+# The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
+jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.table=true
+
+##########################################
 #Settings for HTTP                     #
 ##########################################
 jlegmed.test-http-connection.http.proxy.host=
