--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
     <!-- version of dependencies -->
     <unirest.java.version>3.14.5</unirest.java.version>
+    <classgraph.version>4.8.165</classgraph.version>
 
 
     <!-- version of test dependencies -->
