--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.jexxa.jlegmed</groupId>
   <artifactId>jlegmed</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>2.0.0-beta.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <!-- Project Information -->
