Added: support for fail fast in MessageSenderPool

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -8,12 +8,15 @@ io.jexxa.user.timezone=UTC
 ##########################################
 #Settings for JMSAdapter and JMSSender   #
 ##########################################
-#java.naming.factory.initial=org.apache.activemq.jndi.ActiveMQInitialContextFactory
 jlegmed.test-jms-connection.java.naming.factory.initial=org.apache.activemq.artemis.jndi.ActiveMQInitialContextFactory
 jlegmed.test-jms-connection.java.naming.provider.url=tcp://localhost:61616
-#local jms provider
 jlegmed.test-jms-connection.java.naming.user=artemis
 jlegmed.test-jms-connection.java.naming.password=simetraehcapa
+
+jlegmed.invalid-factory-jms-connection.java.naming.factory.initial=invalid.jndi.ActiveMQInitialContextFactory
+jlegmed.invalid-factory-jms-connection.java.naming.provider.url=tcp://localhost:61616
+jlegmed.invalid-factory-jms-connection.java.naming.user=artemis
+jlegmed.invalid-factory-jms-connection.java.naming.password=simetraehcapa
 
 # required if transactional outbox sender is used
 #jlegmed.test-jms-connection.jdbc.driver=org.postgresql.Driver
