--- a/jlegmed-core/pom.xml
+++ b/jlegmed-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>jlegmed</artifactId>
     <groupId>io.jexxa.jlegmed</groupId>
-    <version>2.0.0-beta.2</version>
+    <version>2.0.0-beta.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>jlegmed-core</artifactId>
