- Moved the deployment process from the legacy OSS deploy server to the new central sonatype

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
     <maven.build.helper.version>3.4.0</maven.build.helper.version>
     <maven.shade.plugin>3.6.0</maven.shade.plugin>
     <maven.templating.plugin>3.0.0</maven.templating.plugin>
+    <maven.central.publishing.plugin>0.7.0</maven.central.publishing.plugin>
 
     <!-- sonar configuration  -->
     <sonar.organization>jexxa-projects</sonar.organization>
@@ -479,6 +480,16 @@
           </nonFilteredFileExtensions>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <version>${maven.central.publishing.plugin}</version>
+        <extensions>true</extensions>
+        <configuration>
+          <publishingServerId>central</publishingServerId>
+          <autoPublish>true</autoPublish>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -666,20 +677,6 @@
       </build>
     </profile>
   </profiles>
-  <distributionManagement>
-    <snapshotRepository>
-      <id>oss.sonatype.org</id>
-      <name>JLegMed snapshot</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <uniqueVersion>true</uniqueVersion>
-    </snapshotRepository>
-    <repository>
-      <id>oss.sonatype.org</id>
-      <name>Jexxa Maven Packages</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-      <uniqueVersion>true</uniqueVersion>
-    </repository>
-  </distributionManagement>
 
   <modules>
     <module>jlegmed-core</module>
