--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -62,6 +62,19 @@ jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://lo
 # The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
 jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.table=true
 
+
+##########################################
+#Settings for Pers                       #
+##########################################
+jlegmed.persistenttimer.jdbc.driver=org.postgresql.Driver
+jlegmed.persistenttimer.jdbc.url=jdbc:postgresql://localhost:5432/jlegmedtest
+jlegmed.persistenttimer.jdbc.username=postgres
+jlegmed.persistenttimer.jdbc.password=admin
+# The Following setting is only required if you want to auto-create your database, and it is supported via connection URL. In this case, you have to define a valid default URL (e.g. for testing purpose)
+jlegmed.persistenttimer.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
+# The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
+jlegmed.persistenttimer.jdbc.autocreate.table=true
+
 ##########################################
 #Settings for HTTP                     #
 ##########################################
