Implemented default properties based on class name or in the case of a lambda method, the class that provides the lambda function

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -76,6 +76,24 @@ jlegmed.persistenttimer.jdbc.autocreate.database=jdbc:postgresql://localhost:543
 jlegmed.persistenttimer.jdbc.autocreate.table=true
 
 ##########################################
+#Settings for JDBCConnection             #
+##########################################
+jlegmed.testrepository.jdbc.driver=org.postgresql.Driver
+jlegmed.testrepository.jdbc.url=jdbc:postgresql://localhost:5432/testrepository
+jlegmed.testrepository.jdbc.username=postgres
+jlegmed.testrepository.jdbc.password=admin
+# The Following setting is only required if you want to auto-create your database, and it is supported via connection URL. In this case, you have to define a valid default URL (e.g. for testing purpose)
+jlegmed.testrepository.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
+# The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
+jlegmed.testrepository.jdbc.autocreate.table=true
+
+##########################################
+#Settings for FlowGraphConfigurationTest #
+##########################################
+
+jlegmed.flowgraphconfigurationtest.name = defaultProperties
+
+##########################################
 #Settings for HTTP                     #
 ##########################################
 jlegmed.test-http-connection.http.proxy.host=
