Added possibility to define start for PersistentTimer time in properties

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -74,6 +74,7 @@ jlegmed.persistenttimer.jdbc.password=admin
 jlegmed.persistenttimer.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
 # The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
 jlegmed.persistenttimer.jdbc.autocreate.table=true
+jlegmed.persistenttimer.start.time=2024-08-15T06:30:00Z
 
 ##########################################
 #Settings for JDBCConnection             #
