--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <postgres.version>42.7.7</postgres.version>
     <slf4j.simple.version>2.0.17</slf4j.simple.version>
     <javalin.version>6.7.0</javalin.version>
+    <archunit.version>1.4.1</archunit.version>
 
 
 
@@ -122,7 +123,12 @@
       </exclusions>
     </dependency>
 
-
+    <dependency>
+      <groupId>com.tngtech.archunit</groupId>
+      <artifactId>archunit</artifactId>
+      <version>${archunit.version}</version>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- dependencies for tests -->
     <dependency>
