--- a/jlegmed-test/pom.xml
+++ b/jlegmed-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jlegmed</artifactId>
         <groupId>io.jexxa.jlegmed</groupId>
-        <version>4.3.0</version>
+        <version>4.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jlegmed-test</artifactId>
