- Plugin `PersistentTimer` now supports properties `lookback.period` to define a relative start time in seconds (s), minutes(m), hours(h), days(d), and weeks(w).   - Example: `lookback.period = 5d` for an initial start time of now() - 5 days

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -63,9 +63,9 @@ jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://lo
 jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.table=true
 
 
-##########################################
-#Settings for Pers                       #
-##########################################
+###############################################
+#Settings for PersistentTimer with start time #
+###############################################
 jlegmed.persistenttimer.jdbc.driver=org.postgresql.Driver
 jlegmed.persistenttimer.jdbc.url=jdbc:postgresql://localhost:5432/jlegmedtest
 jlegmed.persistenttimer.jdbc.username=postgres
@@ -75,6 +75,14 @@ jlegmed.persistenttimer.jdbc.autocreate.database=jdbc:postgresql://localhost:543
 # The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
 jlegmed.persistenttimer.jdbc.autocreate.table=true
 jlegmed.persistenttimer.start.time=2024-08-15T06:30:00Z
+
+#####################################################
+#Settings for PersistentTimer with look back config #
+#####################################################
+
+jlegmed.validlookback.lookback.period=5d
+
+jlegmed.invalidlookback.lookback.period=5f ## char 'f' is invalid
 
 ##########################################
 #Settings for JDBCConnection             #
