--- a/.github/workflows/mavenBuild.yml
+++ b/.github/workflows/mavenBuild.yml
@@ -39,7 +39,7 @@ jobs:
           java-version: 25
       - name: Build with Maven
         run: mvn -B install --file pom.xml
-      - name: sonarqube update
+      - name: SonarQube Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: mvn -Dsonar.token=${{ secrets.SONAR_TOKEN }} sonar:sonar
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
