--- a/.github/workflows/mavenBuild.yml
+++ b/.github/workflows/mavenBuild.yml
@@ -38,8 +38,5 @@ jobs:
           distribution: 'temurin'
           java-version: 25
       - name: Build with Maven
-        run: mvn -B install --file pom.xml
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v6.0.0
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B install sonar:sonar --file pom.xml
+
