--- a/.github/workflows/mavenBuild.yml
+++ b/.github/workflows/mavenBuild.yml
@@ -38,5 +38,8 @@ jobs:
           distribution: 'temurin'
           java-version: 25
       - name: Build with Maven
-        run: mvn -B install sonar:sonar --file pom.xml
-
+        run: mvn -B install --file pom.xml
+      - name: SonarQube Scan
+        run: mvn sonar:sonar
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
