Fix: RepositoryPool now validates an S3 connection correctly

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -51,7 +51,7 @@ jlegmed.test-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://localhos
 jlegmed.test-jdbc-connection.jdbc.autocreate.table=true
 
 ##########################################
-#Settings for JDBCConnection             #
+#Settings for invalid JDBCConnection     #
 ##########################################
 jlegmed.invalid-pw-jdbc-connection.jdbc.driver=org.postgresql.Driver
 jlegmed.invalid-pw-jdbc-connection.jdbc.url=jdbc:postgresql://localhost:5432/jlegmedtest
@@ -61,6 +61,17 @@ jlegmed.invalid-pw-jdbc-connection.jdbc.password=admin2
 jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
 # The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
 jlegmed.invalid-pw-jdbc-connection.jdbc.autocreate.table=true
+
+
+##########################################
+#Settings for invalid S3CConnection     #
+##########################################
+jlegmed.invalid-pw-s3-connection.s3.endpoint=http://localhost:8100
+jlegmed.invalid-pw-s3-connection.s3.region=eu-central-1
+jlegmed.invalid-pw-s3-connection.s3.bucket=jexxa-adapters-test
+jlegmed.invalid-pw-s3-connection.s3.access-key=minioadmin
+jlegmed.invalid-pw-s3-connection.s3.secret-key=minio
+jlegmed.invalid-pw-s3-connection.s3.path-style-access=true
 
 
 ###############################################
