Fix: In case of fail fast, RepositoryPool validates if a specific Repository is defined. This allows for using IMDBRepository in test properties and ignores production settings

--- a/jlegmed-core/src/test/resources/jlegmed-application.properties
+++ b/jlegmed-core/src/test/resources/jlegmed-application.properties
@@ -73,6 +73,28 @@ jlegmed.invalid-pw-s3-connection.s3.access-key=minioadmin
 jlegmed.invalid-pw-s3-connection.s3.secret-key=minio
 jlegmed.invalid-pw-s3-connection.s3.path-style-access=true
 
+#################################################################
+#Settings to validate that explicit strategy overrides settings #
+#################################################################
+jlegmed.explicit.imdb-repository.repository.strategy = io.jexxa.common.drivenadapter.persistence.repository.imdb.IMDBRepository
+# Use invalid settings for s3
+jlegmed.explicit.imdb-repository.s3.endpoint=http://unknown:8100
+jlegmed.explicit.imdb-repository.s3.region=eu-central-1
+jlegmed.explicit.imdb-repository.s3.bucket=jexxa-adapters-test
+jlegmed.explicit.imdb-repository.s3.access-key=minioadmin
+jlegmed.explicit.imdb-repository.s3.secret-key=minio
+jlegmed.explicit.imdb-repository.s3.path-style-access=true
+
+# Use invalid settings for JDBC
+jlegmed.explicit.imdb-repository.jdbc.driver=org.postgresql.Driver
+jlegmed.explicit.imdb-repository.jdbc.url=jdbc:postgresql://unknwon:5432/jlegmedtest
+jlegmed.explicit.imdb-repository.jdbc.username=postgres
+jlegmed.explicit.imdb-repository.jdbc.password=admin2
+# The Following setting is only required if you want to auto-create your database, and it is supported via connection URL. In this case you have to define a valid default URL (e.g. for testing purpose)
+jlegmed.explicit.imdb-repository.jdbc.autocreate.database=jdbc:postgresql://localhost:5432/postgres
+# The Following setting is only required if you want to auto-create your tables (e.g., for testing purpose)
+jlegmed.explicit.imdb-repository.jdbc.autocreate.table=true
+
 
 ###############################################
 #Settings for PersistentTimer with start time #
