[maven-release-plugin] prepare for next development iteration

--- a/jlegmed-core/pom.xml
+++ b/jlegmed-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>jlegmed</artifactId>
     <groupId>io.jexxa.jlegmed</groupId>
-    <version>5.1.3</version>
+    <version>5.1.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>jlegmed-core</artifactId>
